[package]
name = "twixelbox-bot"
version = "0.1.0"
authors = [ "Stuck Overflow <stuckoverflow2021@gmail.com>" ]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
chrono = "0.4"
fastrand = "1.4"
image = "0.23"
kiss3d = "0.31"
log = "0.4"
nalgebra = "0.26"
oauth2 = "4.0.0-alpha"
openssl = { version = "0.10", features = [ "vendored" ] }
rand = "0.8.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
simple_logger = "1.11"
structopt = "0.3"
tempfile = "3"
tokio = { version = "1" }
toml = "0.5"
twitch-irc = { version = "2.2.0", features = [ "refreshing-token" ] }
twitch_api2 = { features = [ "client", "helix", "surf_client", "twitch_oauth2" ], version = "0.5.0" }
twitch_oauth2_auth_flow = { git = "https://github.com/stuck-overflow/twitch_oauth2_auth_flow", branch = "main", features = [ "surf_client" ] }
